--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <!-- Primary Meta Tags -->
-<title>Portfolio | Aja Kumar</title>
+<title>Portfolio | Ajay Kumar</title>
 <meta name="title" content="Portfolio | Ajay Kumar" />
 <meta name="description" content="Ajay's Portfolio. Full-Stack Web Developer and Android App Developer" />
 
