--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="content">
     <h2>Hi There,<br/> I'm Ajay <span>Kumar</span></h2>
-    <p>i am into <span class="typing-text"></span></p>
+    <p>i am <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
@@ -247,7 +247,7 @@
           <h2>Mobiloitte Technologies India</h2>
         </div>
         <div class="desc">
-            <h3>DevOps Engineer</h3>
+            <h3>Senior DevOps Engineer</h3>
             <p>Nov 2022 - present</p>
         </div>
       </div>
@@ -268,7 +268,7 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>System Engineer</h2>
+          <h2>DevOps Engineer</h2>
         </div>
         <div class="desc">
             <h3>Elixir Softech</h3>
@@ -280,7 +280,7 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Technical Support Engineer</h2>
+          <h2>Server Engineer</h2>
         </div>
         <div class="desc">
             <h3>Associated Business Computers</h3>
