--- a/index.html
+++ b/index.html
@@ -244,11 +244,23 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
+          <h2>Onsite Electro Services</h2>
+        </div>
+        <div class="desc">
+            <h3>Senior DevOps Engineer</h3>
+            <p>Aug 2023 - Nov 2024</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
           <h2>Mobiloitte Technologies India</h2>
         </div>
         <div class="desc">
             <h3>Senior DevOps Engineer</h3>
-            <p>Nov 2022 - present</p>
+            <p>Nov 2022 - Jul 2023</p>
         </div>
       </div>
     </div>
