--- a/index.html
+++ b/index.html
@@ -115,10 +115,7 @@
         <h3>I'm Ajay</h3>
         <span class="tag">DevOps & Cloud Engineer</span>
         
-        <p>I am a DevOps & Cloud Engineer based in Delhi, India. 
-         DevOps Engineer with 5+ years of relevant industrial experience. with key skills - Azure DevOps, Linux, AWS, Ansible, Docker, Kubernetes, Jenkins, Terraform, and Python Scripting.
-          Working for myself to improve my skills.
-          Love to DevOps & Cloud. </p>
+        <p>Senior DevOps Cloud Engineer with over 6+ years of experience in designing, implementing, and managing cloud-based infrastructure across AWS, Azure, and GCP environments. Proven expertise in containerization, orchestration, automation, and CI/CD pipelines using tools such as Docker, Kubernetes, Terraform, Jenkins, Ansible, and Python. Strong background in Linux systems administration and infrastructure as code (IaC) to enhance deployment efficiency and maintain high availability, scalability, and security across cloud platforms. </p>
         <div class="box-container">
             <div class="box">
               <p><span> date of birth: </span> 17 May 1996</p>
@@ -131,7 +128,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1NhFIBcTPq0vzoF1o1iu0OpeFrhKAT_60/view?usp=share_link" class="btn"
+            <a href="https://drive.google.com/file/d/1j6YAVcJWnUEeqEw6sYGKUPtSYGEDChcl/view?usp=drivesdk" class="btn"
             download
             target="_blank"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
