--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="/assets/images/ajaysahai.in.jpeg" alt="">
+        <img draggable="false" class="tilt" src="/assets/images/profile-pic.png" alt="">
     </div>
     <div class="content">
         <h3>I'm Ajay</h3>
