--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
   <div class="timeline">
 
-    <div class="container right">
+    <div class="container left">
       <div class="content">
         <div class="tag">
           <h2>Onsite Electro Services</h2>
