--- a/index.html
+++ b/index.html
@@ -241,6 +241,18 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
+          <h2>DevOps Engineer</h2>
+        </div>
+        <div class="desc">
+            <h3> Bamko </h3>
+            <p>Aug 2021 - Sep 2022</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
           <h2>Onsite Electro Services</h2>
         </div>
         <div class="desc">
@@ -260,19 +272,7 @@
             <p>Nov 2022 - Jul 2023</p>
         </div>
       </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>DevOps Engineer</h2>
-        </div>
-        <div class="desc">
-            <h3> (Svastir LLC)</h3>
-            <p>Aug 2021 - Sep 2022</p>
-        </div>
-      </div>
-    </div>
+    </div>
 
     <div class="container right">
       <div class="content">
