--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
         <div class="desc">
             <h3> Bamko </h3>
-            <p>Aug 2021 - Sep 2022</p>
+            <p>Dec 2024 - Now</p>
         </div>
       </div>
     </div>
