--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>DevOps Engineer</h2>
+          <h2>BAMKO</h2>
         </div>
         <div class="desc">
-            <h3> Bamko </h3>
+            <h3> Senior DevOps Engineer</h3>
             <p>Dec 2024 - Now</p>
         </div>
       </div>
@@ -277,10 +277,10 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>DevOps Engineer</h2>
+          <h2>Elixir Softech</h2>
         </div>
         <div class="desc">
-            <h3>Elixir Softech</h3>
+            <h3>DevOps Engineer</h3>
             <p>Jan 2019 - Aug 2021</p>
         </div>
       </div>
@@ -289,10 +289,10 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Server Engineer</h2>
+          <h2>Associated Business Computer</h2>
         </div>
         <div class="desc">
-            <h3>Associated Business Computers</h3>
+            <h3>Server Engineer</h3>
             <p>Mar 2018 - Jan 2019</p>
         </div>
       </div>
