--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
         <div class="desc">
             <h3> Senior DevOps Engineer</h3>
-            <p>Dec 2024 - Now</p>
+            <p>Dec 2024 - Present</p>
         </div>
       </div>
     </div>
@@ -269,7 +269,7 @@
         </div>
         <div class="desc">
             <h3>Senior DevOps Engineer</h3>
-            <p>Nov 2022 - Jul 2023</p>
+            <p>Aug 2021 - Jul 2023</p>
         </div>
       </div>
     </div>
