--- a/index.html
+++ b/index.html
@@ -269,10 +269,11 @@
         </div>
         <div class="desc">
             <h3>Senior DevOps Engineer</h3>
-            <p>Aug 2021 - Jul 2023</p>
+            <p>May 2020 - Jul 2023</p>
         </div>
       </div>
-    </div>
+    </div>
+
 
     <div class="container right">
       <div class="content">
@@ -281,12 +282,12 @@
         </div>
         <div class="desc">
             <h3>DevOps Engineer</h3>
-            <p>Jan 2019 - Aug 2021</p>
+            <p>Jan 2018 - May 2020</p>
         </div>
       </div>
     </div>
 
-    <div class="container left">
+<!--     <div class="container left">
       <div class="content">
         <div class="tag">
           <h2>Associated Business Computer</h2>
@@ -296,7 +297,7 @@
             <p>Mar 2018 - Jan 2019</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="container right">
       <div class="content">
