--- a/experience/index.html
+++ b/experience/index.html
@@ -42,53 +42,55 @@
 
   <div class="timeline">
 
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>BAMKO</h2>
+        </div>
+        <div class="desc">
+            <h3> Senior DevOps Engineer</h3>
+            <p>Dec 2024 - Present</p>
+        </div>
+      </div>
+    </div>
+
     <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Onsite Electro Services</h2>
+        </div>
+        <div class="desc">
+            <h3>Senior DevOps Engineer</h3>
+            <p>Aug 2023 - Nov 2024</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container left">
       <div class="content">
         <div class="tag">
           <h2>Mobiloitte Technologies India</h2>
         </div>
         <div class="desc">
-            <h3>DevOps Engineer</h3>
-            <p>Nov 2022 - present</p>
+            <h3>Senior DevOps Engineer</h3>
+            <p>May 2020 - Jul 2023</p>
         </div>
       </div>
     </div>
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>DevOps Engineer</h2>
-        </div>
-        <div class="desc">
-            <h3>Ahamco Services (Svastir LLC)</h3>
-            <p>Aug 2021 - Sep 2022</p>
-        </div>
-      </div>
-    </div>
 
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>System Engineer</h2>
+          <h2>Elixir Softech</h2>
         </div>
         <div class="desc">
-            <h3>Elixir Softech</h3>
-            <p>Jan 2019 - Aug 2021</p>
+            <h3>DevOps Engineer</h3>
+            <p>Jan 2018 - May 2020</p>
         </div>
       </div>
     </div>
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Technical Support Engineer</h2>
-        </div>
-        <div class="desc">
-            <h3>Associated Business Computers</h3>
-            <p>Mar 2018 - Jan 2019</p>
-        </div>
-      </div>
-    </div>
     <!-- <div class="container left">
       <div class="content">
         <div class="tag">
