--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1w6V4WfVfSoX-MhOBp-yImSrejOo0Axi-/view?usp=drivesdk" class="btn"
+            <a href="https://drive.google.com/file/d/1oeUz7JBq2DAQyNKS5CdJbLoXHK-v2pCg/view?usp=sharing" class="btn"
             download
             target="_blank"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
