--- a/experience/index.html
+++ b/experience/index.html
@@ -45,7 +45,7 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>BAMKO</h2>
+          <h2>BAMKmmmmO</h2>
         </div>
         <div class="desc">
             <h3> Senior DevOps Engineer</h3>
