--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>BAMKO</h2>
+          <h2>BAMfffKO</h2>
         </div>
         <div class="desc">
             <h3> Senior DevOps Engineer</h3>
