--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>BAMfffKO</h2>
+          <h2>Mobile Programming India</h2>
         </div>
         <div class="desc">
             <h3> Senior DevOps Engineer</h3>
-            <p>Dec 2024 - Present</p>
+            <p>May 2025 - Present</p>
         </div>
       </div>
     </div>
