--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/19bMtbHo8ljNMbxvDaNrXVb2YCYL4sdO0/view?usp=drivesdk" class="btn"
+            <a href="https://drive.google.com/file/d/1fE9LVFcHRH1kXfpHisQNPw_YkVtfzyY-/view?usp=sharing" class="btn"
             download
             target="_blank"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
