--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <a href="/" class="logo"> Ajay</a>
 
         <div id="menu" class="fas fa-bars"></div>
+        <div id="theme-toggle" class="theme-toggle">
+            <img src="./assets/images/moon.png" alt="Dark Mode" id="theme-icon" class="theme-icon">
+        </div>
         <nav class="navbar">
             <ul>
             <li><a class="active" href="#home">Home</a></li>
