GitHub Pages image loading issue

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="/assets/images/profile-pic.png" alt="">
+        <img draggable="false" class="tilt" src="./assets/images/profile-pic.png" alt="">
     </div>
     <div class="content">
         <h3>I'm Ajay</h3>
@@ -175,7 +175,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="/assets/images/educat/Delhi University.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/Delhi University.jpg" alt="">
         </div>
         <div class="content">
         <h3>Bachelor Of Arts</h3>
@@ -186,7 +186,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="/assets/images/educat/cbse.jpg" alt="">
+      <img draggable="false" src="./assets/images/educat/cbse.jpg" alt="">
       </div>
       <div class="content">
       <h3>All India Senior School</h3>
